<resources>
    <string name="app_name">SMS Engineer</string>
    <string name="dashboard">Hi Anil</string>
    <string name="registration">Registration</string>

    <string name="odk_intent_data_field_error">Unrecognized field for odk_intent_data: </string>
    <string name="name"> &#xf234; Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_customer_mobile">Enter Customer Mobile</string>
</resources>